GL/src/test/deca/codegen/valid/deca_sans_objet/if_Else/LT.deca
// Description :
// Test de l'opérateur '<'.
//
// Resultats :
// 4

{
    int x = 1;
    int y = 4;
    if (x < y) {
        print(4);
    }
}