GL/src/test/deca/codegen/invalid/division_par_zero_float.deca
{
    float x = 1.0, y = 0.0;
    
    println(x/y);

}